--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
 	"scripts": {
 		"build": "tsc src/index.ts",
 		"start": "node dist/index.js",
-		"dev": "nodemon src/index.ts"
+		"dev": "nodemon src/index.ts",
+		"prisma:seed": "npx prisma db seed"
+	},
+	"prisma": {
+		"seed": "ts-node prisma/seed.ts"
 	},
 	"repository": {
 		"type": "git",
